--- a/j4s3/pom.xml
+++ b/j4s3/pom.xml
@@ -51,69 +51,15 @@
 				</configuration>
 			</plugin>-->
 			
-			<!-- <plugin> 
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>copy-dependencies</id>
-                    <phase>prepare-package</phase>
-                    <goals>
-                        <goal>copy-dependencies</goal>
-                    </goals>
-                    <configuration>
-                        <outputDirectory>${project.build.directory}/classes/lib</outputDirectory>                       
-                        <overWriteReleases>false</overWriteReleases>
-                        <overWriteSnapshots>false</overWriteSnapshots>
-                        <overWriteIfNewer>true</overWriteIfNewer>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-			-->
-			
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<finalName>j4s3</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-					<!-- <descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-						
-					</descriptorRefs>-->
-				 <descriptors>
-            <descriptor>src/main/assembly/descriptor.xml</descriptor>
-          </descriptors>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-                        	<classpathPrefix>lib/</classpathPrefix>
-						 	<mainClass>eu.giuseppeurso.aws.s3.UI</mainClass>
-						</manifest>
-						<manifestEntries>
-                        <Class-Path>.lib/</Class-Path>
-                    </manifestEntries>
-					</archive>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>install</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
+			<!-- To prevent conflicts between the project's MANIFEST.MF and the bouncycastle jar,
+			     all dependencies are copied in a dedicated lib directory.    -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
@@ -127,17 +73,12 @@
 				</executions>
 			</plugin>
 			
-			<!-- <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				
-					
 				<configuration>
 				<finalName>j4s3</finalName>
-				  <includes>
-              <include>**/*</include>
-            </includes>
-				  <archive>
+				<archive>
 					<manifest>
 						<addClasspath>true</addClasspath>
                         <classpathPrefix>lib/</classpathPrefix>
@@ -145,12 +86,11 @@
 					</manifest>
 				  </archive>
 				</configuration>
-				
 			</plugin>
- -->
+			
+			
 			
 		</plugins>
 	</build>
-
 
 </project>
