--- a/j4s3/pom.xml
+++ b/j4s3/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.giuseppeurso.aws</groupId>
 	<artifactId>s3-j4s3</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>Java Client for S3</name>
 
 	<properties>
